move server list to http